--- a/css/styles.css
+++ b/css/styles.css
@@ -54,38 +54,38 @@ html {
 
 body, p {
 	color: #6b747b; 
-	font: 400 1.25rem/1.5rem "Open Sans", sans-serif;
+	font: 400 1.1rem/1.35rem "Open Sans", sans-serif;
 }
 
 h1 {
 	color: #252c38;
 	font-weight: 700;
-	font-size: 2.5rem;
-	line-height: 3.125rem;
+	font-size: 2.1rem;
+	line-height: 2.8rem;
 	letter-spacing: -0.5px;
 }
 
 h2 {
 	color: #252c38;
 	font-weight: 700;
-	font-size: 2.125rem;
-	line-height: 2.625rem;
+	font-size: 2rem;
+	line-height: 2.5rem;
 	letter-spacing: -0.4px;
 }
 
 h3 {
 	color: #252c38;
 	font-weight: 700;
-	font-size: 1.75rem;
-	line-height: 2.25rem;
+	font-size: 1.5rem;
+	line-height: 2rem;
 	letter-spacing: -0.3px;
 }
 
 h4 {
 	color: #252c38;
 	font-weight: 700;
-	font-size: 1.5rem;
-	line-height: 2rem;
+	font-size: 1.2rem;
+	line-height: 1.6rem;
 	letter-spacing: -0.2px;
 }
 
@@ -104,8 +104,8 @@ h6 {
 }
 
 .h1-large {
-	font-size: 2.875rem;
-	line-height: 3.5rem;
+	font-size: 2.4rem;
+	line-height: 3.0rem;
 }
 
 .p-large {
@@ -456,8 +456,8 @@ input[type='checkbox'] {
 .navbar {
 	background-color: #f1f9fc;
 	font-weight: 600;
-	font-size: 0.875rem;
-	line-height: 0.875rem;
+	font-size: 1rem;
+	line-height: 1rem;
 }
 
 .navbar .navbar-brand {
@@ -692,7 +692,7 @@ input[type='checkbox'] {
 }
 
 .basic-2 .block-container{
-	margin-bottom: 2.5rem;
+	margin-bottom: 1.2rem;
 	line-height: 0.5rem;
 }
 .basic-2 .right-info {
@@ -1530,7 +1530,7 @@ a:hover.back-to-top {
 
 	/* Copyright */
 	.copyright {
-		text-align: left;
+		text-align: center;
 	}
 
 	.copyright .list-unstyled li {
@@ -1539,7 +1539,7 @@ a:hover.back-to-top {
 	}
 
 	.copyright .statement {
-		text-align: right;
+		text-align: center;
 	}
 	/* end of copyright */
 
