--- a/css/styles.css
+++ b/css/styles.css
@@ -680,7 +680,7 @@ input[type='checkbox'] {
 /*     Details 1     */
 /*********************/
 .basic-2 {
-	padding-top: 2rem;
+	padding-top: 1rem;
 	padding-bottom: 2.5rem;
 }
 
@@ -692,8 +692,8 @@ input[type='checkbox'] {
 }
 
 .basic-2 .block-container{
-	margin-bottom: 2.5rem;
-	line-height: 0.5rem;
+	margin-bottom: 1rem;
+	line-height: 0.4rem;
 }
 .basic-2 .right-info {
 	text-align: left;
@@ -717,7 +717,7 @@ input[type='checkbox'] {
 .project-row .cell-vertical-center{
 	display: flex; 
 	align-items: center; 
-	justify-content: center;
+	/*justify-content: center;*/
 }
 
 
@@ -1409,7 +1409,7 @@ a:hover.back-to-top {
 
 	/* Details 1 */
 	.basic-2 {
-		padding-top: 4rem;
+		padding-top: 2rem;
 	}
 
 	.basic-2 .text-container {
