--- a/css/styles.css
+++ b/css/styles.css
@@ -54,14 +54,14 @@ html {
 
 body, p {
 	color: #6b747b; 
-	font: 400 1.25rem/1.5rem "Open Sans", sans-serif;
+	font: 400 16px/16px "Open Sans", sans-serif;
 }
 
 h1 {
 	color: #252c38;
 	font-weight: 700;
-	font-size: 2.5rem;
-	line-height: 3.125rem;
+	font-size: 24px;
+	line-height: 180%;
 	letter-spacing: -0.5px;
 }
 
@@ -101,6 +101,10 @@ h6 {
 	font-weight: 700;
 	font-size: 1rem;
 	line-height: 1.375rem;
+}
+
+.project-title {
+	color: #467599;
 }
 
 .h1-large {
@@ -199,6 +203,15 @@ a:hover {
 	background-color: transparent;
 	color: #467599; /* needs to stay here because of the color property of a tag */
 	text-decoration: none;
+}
+
+.project .btn-solid-lg {
+	background-color: transparent;
+	color: #467599;
+}
+.project .btn-solid-lg:hover {
+	background-color: #467599;
+	color: #ffffff;
 }
 
 .btn-solid-lg .fab {
@@ -692,7 +705,7 @@ input[type='checkbox'] {
 }
 
 .basic-2 .block-container{
-	margin-bottom: 1rem;
+	margin-bottom: 24px;
 	line-height: 0.4rem;
 }
 .basic-2 .right-info {
