--- a/css/styles.css
+++ b/css/styles.css
@@ -54,13 +54,13 @@ html {
 
 body, p {
 	color: #6b747b; 
-	font: 400 16px/16px "Open Sans", sans-serif;
+	font: 400 16px/18px "Open Sans", sans-serif;
 }
 
 h1 {
 	color: #252c38;
 	font-weight: 700;
-	font-size: 24px;
+	font-size: 28px;
 	line-height: 180%;
 	letter-spacing: -0.5px;
 }
@@ -105,6 +105,7 @@ h6 {
 
 .project-title {
 	color: #467599;
+	padding-top: 16px;
 }
 
 .h1-large {
