--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ footer, header, hgroup, menu, nav, section {
 a{
 	text-decoration: none;
 	text-transform: none;
-	color: #4A90E2;
+	color: #3482dc;
 }
 
 body {
@@ -48,10 +48,13 @@ body {
 	font-family: lato, ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 	text-rendering : optimizeLegibility;
 	-webkit-font-smoothing : antialiased;
-	font-size: 19px;
+	font-size: 16px;
 	background-color: #FEFEFE;
 	color: #04143A;
-	margin: 10%;
+	margin-left: 20%;
+	margin-right: 20%;
+	margin-top: 10%;
+	margin-bottom: 10%;
 }
 ol, ul {
 	list-style: none;
@@ -71,7 +74,7 @@ table {
 
 p {
 	color: #15171a;
-	font-size: 17;
+	font-size: 16px;
 	line-height: 31px;
 }
 
@@ -115,7 +118,7 @@ div , footer {
 }
 
 h1.name {
-	font-size: 48px;
+	font-size: 40px;
 	font-weight: 300;
 	display: inline-block;
 }
@@ -145,7 +148,7 @@ h1.name {
 
 .email {
 	display: block;
-	font-size: 24px;
+	font-size: 20px;
 	font-weight: 300;
 	color: #81899C;
 	margin-top: 10px;
@@ -160,7 +163,7 @@ h1.name {
 }
 
 .intro p {
-	font-size: 18px;
+	font-size: 16px;
 	margin-top: 20px;
 	margin-bottom: 16px;
 }
@@ -174,26 +177,32 @@ h1.name {
 	align-items: center; 
 	margin-top: 25px;
 	margin-bottom: 25px;
-	font-size: 18px;
+	font-size: 16px;
 	line-height: 26px;
 	/*justify-content: center;*/
 }
 
 .publication .title {
-	font-weight: bold;
+	font-weight: bolder;
 	margin-top: 0;
 	margin-bottom: 0;
+	color: #3482dc;
 }
 
 .publication .author {
-	font-style: italic;
+	/* font-style: italic; */
 	margin-top: 0;
 	margin-bottom: 0;
 }
 
-.publication .publish {
-	font-weight: bolder;
-	color: #5B6A9A;
+.publication .author a {
+	color: black;
+}
+
+.publication .venue {
+	/* font-weight: bolder; */
+	font-style: italic;
+	color: black;  /* #4A90E2; /* #5B6A9A; */
 	margin-top: 0;
 	margin-bottom: 6px;
 }
@@ -242,11 +251,12 @@ h1.name {
 .btn {
 	background-color: #EEF0F7;
 	display: inline-block;
-	margin: 0px 5px 0px 0px;
+	margin: 0px 4px 0px 0px;
 	vertical-align: top;
-	border-radius: 10px;
+	border-radius: 8px;
 	text-align: center;
-	padding: 5px 10px 5px 10px;
+	padding: 4px 8px 4px 8px;
+	font-size: 14px;
 }
 
 .btn-active , .btn:hover{
@@ -255,6 +265,7 @@ h1.name {
 	background-color: #fff;
 	box-shadow: 0px 5px 50px -8px #ddd;
 	cursor: pointer;
+	font-size: 14px;
 }
 
 /* Timeline styles*/
@@ -299,7 +310,7 @@ li {
 	position: relative;
 	display: inline-block;
 	/* float: left; */
-	width: 20%;
+	width: 16%;
 	max-width: 150px;
 	vertical-align: top;
 }
