--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,12 @@ ol, ul {
 blockquote, q {
 	quotes: none;
 }
+
+.publication-visual {
+	border-radius: 12px;
+	box-shadow: 0px 0px 12px -2px #eaeaea;
+}
+
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
@@ -233,7 +239,7 @@ h1.name {
 	margin-bottom: 10px;
 }
 
-.publication .emph {
+.emph {
 	color: rgb(234, 77, 77);
 	font-weight: 600;
 	font-style: normal;
@@ -276,17 +282,18 @@ h1.name {
 	display: inline-block;
 	margin: 0px 4px 0px 0px;
 	vertical-align: top;
-	border-radius: 8px;
+	border-radius: 40px;
 	text-align: center;
-	padding: 4px 8px 4px 8px;
+	padding-left: 14px;
+	padding-right: 14px;
 	font-size: 14px;
 }
 
 .btn-active , .btn:hover{
-	transform: scale(1.02);
-	transition: 0.5s;
-	background-color: #fff;
-	box-shadow: 0px 5px 50px -8px #ddd;
+	/* transform: scale(1.02); */
+	transition: 0.3s;
+	background-color: #d3d6e1;
+	/* box-shadow: 0px 5px 50px -8px #ddd; */
 	cursor: pointer;
 	font-size: 14px;
 }
@@ -333,7 +340,7 @@ li {
 	position: relative;
 	display: inline-block;
 	/* float: left; */
-	width: 13.5%;
+	width: 15%;
 	max-width: 150px;
 	vertical-align: top;
 }
